--- a/cap_balancacomercial/main.Rmd
+++ b/cap_balancacomercial/main.Rmd
@@ -26,56 +26,52 @@ b <- 1000000000
 
 # Comércio Exterior
 
-A balança comercial registra as transações de importação, que envolvem a compra ou recebimento de bens de outros países, e as exportações, que se referem à venda ou envio de serviços para o exterior. O saldo comercial é considerado positivo quando o valor das exportações supera o das importações, resultando em um superávit. Por outro lado, quando o valor das importações é maior do que o das exportações, ocorre um déficit. A balança comercial não leva em consideração apenas a quantidade de produtos que entram ou saem de um país, mas sim os recursos gerados por essas transações. No contexto do Brasil, a balança comercial do Tocantins, por exemplo, apresenta um superávit, o que significa que a região exporta mais do que importa, resultando em um saldo positivo em sua balança comercial.
+A balança comercial é uma parte fundamental da balança de pagamentos de um país, refletindo a diferença entre o valor das exportações e importações de bens. Quando falamos sobre comércio exterior, a balança comercial é um indicador crucial que ajuda a entender a posição econômica de um país no mercado global. No comércio internacional, o saldo quando está positivo apresenta um Superavit Comercial, quando o valor das exportações excede o valor das importações. Este fator pode indicar que um país está se saindo bem no comércio entre outros países e pode contribuir para o crescimento econômico. 
 
+Por outro lado, quando o valor das importações supera o valor das exportações temos um déficit, ou seja, um saldo negativo. No contexto do Brasil, em especial ao estado do Tocantins, a sua balança comercial apresenta um superávit, o que significa que ela exporta mais do que importa dentro de sua área.
 
-De acordo com o Gráfico [fig:@total], no ano de 2022, as exportações do Tocantins fecharam em aproximadamente US$ 3,1 bilhões e as importações totalizaram US$ 881,3 milhões. Diante desses desempenhos, as exportações e importações tiveram um aumento de 67% e 44%, respectivamente. o saldo da Balança Comercial (exportações menos importações) ficou em US$ 2,2 bilhões, representando um crescimento de 79% em comparação com o ano de 2021. A balança comercial apresenta os aspectos da comercialização de exportação e importação no estado do Tocantins. Durante o decorrer desses últimos 5 anos o saldo comercial tem oscilado, mas sempre se mantendo com um saldo superavitário. Dentre os estados brasileiros, o Tocantins ocupou a 14ª posição nas exportações e o 19º lugar nas importações no período em análise. O Tocantins representou 0,9% das exportações e 0,3% das importações do país
+De acordo com o Gráfico [fig:@total], no ano de 2023, as exportações do Tocantins fecharam em aproximadamente U\$ 3,01 bilhões e as importações totalizaram em U\$ 271,9 Milhões no mesmo período. Diante desses resultados, as exportações do estado registraram uma queda de 2,4% em comparação ao ano anterior e as importações recuaram 69%, respectivamente. O saldo da Balança Comercial (exportações – importações) ficou em U$ 2,7 bilhões, mostrando desta forma, um crescimento de 24% em relação ao ano de 2022. A balança comercial apresenta os aspectos da comercialização de exportação e importação no estado do Tocantins. 
+
+Durante o decorrer desses últimos 5 anos o saldo comercial tem oscilado, mas sempre se mantendo com um saldo superavitário. Dentre os estados da região Norte do país, o Tocantins ficou na 14ª posição nas exportações e a 24ª posição nas importações. O estado também representou 0,95% das exportações e 0,1% das importações para o comércio exterior brasileiro. 
 
 
 ```{r produtos_expo, fig.cap = "Principais produtos exportados", fig.subcap = "Em milhões de US$", fig.source = "\\acrshort{comex}", wrap = TRUE}
 # Produtos exportados
-read_xlsx("cap_balancacomercial/cap_balancacomercialbc_2022.xlsx", sheet = "produtos_export") %>%
+read_xlsx("C:/Users/Lorenzo Costa/Desktop/Boletim 2024/cap_balancacomercial/_Boletim_dados_2023.xlsx.xlsx", sheet = "produtos_export") %>%
   ggplot(aes(data, valor, fill = produto)) +
   geom_bar(stat = "identity", position = "dodge", gap = "s") +
   scale_y_continuous(labels = function(x) x / m) +
   guides(fill = guide_legend(nrow = 2, byrow = TRUE))
 ```
 
-Carne bovina fresca, congelada ou refrigerada desempenhou um papel notável no ano de 2022, representando 19% do total das exportações do estado, atingindo um valor de US$ 573 milhões segundo o gráfico 4.1.1. Além disso, é relevante observar que esse setor registrou um aumento considerável de 58,3% em comparação com anos anteriores.
+Ao analisar o gráfico [fig:@produtos_expo] é notório observar que, a soja foi o produto mais exportado no ano 2023, atingindo U\$ 1,9 bilhões em sua comercialização, que resultou uma participação significante de 63% na balança comercial do Tocantins. Além disso, é relevante observar este produto registrou um crescimento de 15,6% em volume exportado. Na segunda posição, o milho não moído correspondeu a uma participação de 15% no total exportado pelo estado em 2023, totalizando U$ 448 milhões. Com isso, houve um aumento de 6,17% em relação ao ano anterior.   
 
-\
-Matérias brutas de animais teve uma participação de 5,8% no total da exportação estadual, a um valor de 178 milhões, valor este que apresentou uma variação de 322%. Os dados referentes ao ano de 2022 nos mostra como as matérias brutas de animais tem crescido ao decorrer do ano e tem sido uma fonte nova de riqueza para o estado.
-\
-(Milho não moído) O milho correspondeu a 14% das exportações estaduais em 2022, registrando um valor de US$ 422 milhões. Esse valor apresentou um aumento significativo em relação ao ano anterior. 
+Com 13% de participação na balança comercial do estado, a carne bovina apresentou no mesmo ano de 2023 um total de U\$403 milhões. Em comparação ao ano de 2022, o produto sofreu uma queda relevante de aproximadamente 30% em detrimento da redução das transações com um dos seus principais parceiros comercial, a China. E os demais produtos apresentaram uma participação de 23% na exportação, totalizando um valor de aproximadamente U$ 693,1 milhões.
 
-Entre os produtos exportados pelo Tocantins, a soja assumiu a liderança, com uma impressionante participação de 58% e um valor total de US$ 1,8 bilhão. As exportações registraram um aumento de 41%. 
-
-O acumulado de importações de Adubos ou fertilizantes é um fator notável na economia do estado em 2022, atingindo um valor de US$ 247 milhões, o que equivale a uma parcela significativa de 28% do total das importações. 
+No ano de 2023 as importações do estado tiveram uma queda bastante representativa comparado ao valor total de bens importados no ano anterior, já que o valor totalizado de 2022 foi de U\$881,3 milhões para o valor de U$ 271,9 Milhões em 2023, uma queda de 69%. Observando o gráfico [fig:@produtos_import] pode-se concluir essa diferença no tamanho das colunas em seus respectivos anos e itens. Os principais produtos que mais foram importados pelo Tocantins foram: óleos de petróleo, adubos ou fertilizantes químicos e produtos residuais de petróleo e materiais relacionados.
 
 ```{r produtos_import, fig.cap = "Principais produtos importados", fig.subcap = "Em milhões de US$", fig.source = "\\acrshort{comex}", wrap = TRUE}
 # Produtos importados
-read_xlsx("cap_balancacomercial/cap_balancacomercialbc_2022.xlsx", sheet = "produtos_import")  %>%
+read_xlsx("C:/Users/Lorenzo Costa/Desktop/Boletim 2024/cap_balancacomercial/_Boletim_dados_2023.xlsx.xlsx", sheet = "produtos_import")  %>%
   ggplot(aes(data, valor, fill = produto)) +
   geom_bar(stat = "identity", position = "dodge", gap = "s") +
   scale_y_continuous(labels = function(x) x / m) +
   guides(fill = guide_legend(nrow = 3, byrow = TRUE))
 ```
 
-Ao observar o Gráfico [fig:@produtos_import], a importação de lentes e itens óticos teve recuperação em 2021, mas 2022 teve uma leve redução, O item é o de menor valor de importações dos cinco itens aqui apontados, atingindo um valor de 17,1 milhões e com participação de 1,9%. mas com peso significativo nas importações do estado. 
-\
+O primeiro representou uma participação de 25% do total importado pelo estado, e alcançou ou saldo de U\$68,6 milhões, valor inferior ao ano anterior. Adubos ou fertilizantes químicos foram os itens com maior volume e valor, com uma participação de 27% e totalizando U\$73,0 milhões. Apesar da redução de sua quantidade, este item ainda compõe o número maior em participação em relação aos outros bens importados. Na terceira posição, ao analisar o gráfico [fig:@produtos_import], os produtos residuais de petróleo atingiram um valor de U\$39,5 milhões no ano de 2023, tendo uma participação de 15% na balança comercial do estado. Os demais produtos, apresentaram uma participação 33% e totalizando um montante de U$ 90,1 milhões.
 
-Óleos e combustíveis são extremamente significativos na pauta, sendo o item de maior valor de importação do período selecionado. O item sofreu queda significativa em 2019, mas se recuperou nos anos seguintes. Nos anos de 2020 o volume importado alcançou os 100 milhões de dólares e, em 2021, os 300 milhões de dólares.
-\
+A Tabela [tab:@origem] apresenta os principais parceiros comerciais do Tocantins e seus principais blocos econômicos que exportaram e importaram no ano de 2023. Quando o assunto é exportação, o Tocantins desempenha um papel de relevo comparado ao pouco tempo que o estado tem de existência, e mesmo sendo relativamente pequeno, está na 14ª colocação no ranking de maiores exportadores brasileiros. 
 
-Nas importações tiveram destaque os óleos e combustíveis com um total de US$ 439 milhões e participação de 50% no total importado.
-\
+No ano de 2023 teve uma variação de 2,4% de queda das exportações em relação ao ano de 2022 atingindo o valor bruto de U\$3,01 bilhões em dólares. Em 2023, o Tocantins comercializou seus produtos com 90 países, entre eles a China, seu principal parceiro, que teve participação de 61% no total das exportações, aumentando em 9% em comparação ao ano de 2022. 
 
+A diversidade de países com relações comerciais com o Tocantins é visível na Tabela [fig:@origem], pois além da China, grande compradora dos grãos e carnes produzidos no estado, encontra-se também países como Espanha, representando 8% do total exportado, representando uma queda de 4,32% em relação ao ano anterior, e Arábia Saudita com 3,1%, no qual não cresceu de forma tão expressiva ao comparar com o ano passado (cerca de 0,36%). 
 
 ```{r total, fig.cap = "Balança Comercial do estado", fig.subcap = "Em bilhões de USD", fig.source = "\\acrshort{comex}", wrap = TRUE}
 # Saldo, Exportação e Importaçao 2012--2022
 c("export", "import", "saldo") %>%
   purrr::map(
-    ~readxl::read_xlsx("cap_balancacomercial/cap_balancacomercialbc_2022.xlsx", sheet = .x) %>%
+    ~readxl::read_xlsx("C:/Users/Lorenzo Costa/Desktop/Boletim 2024/cap_balancacomercial/_Boletim_dados_2023.xlsx.xlsx", sheet = .x) %>%
     dplyr::mutate(conta = .x)
   ) %>%
   purrr::map_dfr(~tidyr::unnest(.)) %>%
@@ -92,37 +88,39 @@ c("export", "import", "saldo") %>%
   scale_y_continuous(labels = function(n) n / b) +
   scale_x_date(labels = date_format("%Y"), date_breaks = "1 year")
 ```
+Nas importações a Rússia se destacou ficando em 1º lugar, com 32,14% de representatividade, Óleos de petróleo de minerais betuminosos e adubos fertilizantes estão entre os produtos mais importados pelo estado. Outros países no qual o Tocantins aparece dependente nas importações são China com 15% de participação seguida pela Bélgica com 14%, Estônia com 6,5% e EUA com 5,9%. Vale lembrar que, a Tabela [tab:@origim] apresenta estes países como os principais parceiros comerciais do Tocantins.
 
-Ainda no Gráfico [fig:@produtos_import], nota-se que, diferente dos óleos e combustíveis, os produtos residuais de petróleo apresentaram somente um ligeiro aumento nas importações para o ano de 2022 em relação ao ano de 2021. Nos anos anteriores, se manteve, relativamente, ainda mais baixo, tendo algum aumento no valor importado em 2020.  Em 2021, o valor importado chega próximo dos 100 milhões em importações, todavia em diante não apresenta um crescimento de vulto considerável. Os demais produtos da pauta de importações não apresentaram, também, variação significativa. Nos cinco anos do período selecionado os demais produtos se mantiveram abaixo dos 50 milhões de valor importado de maneira que não demonstraram, nem peso significativo, nem variação significativa na pauta.
-\
+No que tange os municípios tocantinenses que mais apresentaram relações comerciais em termos nominais com o resto do mundo, Porto Nacional foi o munípio que mais relacionou-se com o exterior, tanto na exportação quanto na importação, como é visível na tabela [tab:@munin]. A capital surge logo depois como o segundo município que mais desempenhou relações internacionais no ano de 2023, com uma diferença relativa vultosa nas exportações e nas importações. 
 
+Gurupi se apresentou como o terceiro município que mais participou do comércio exterior, tanto nas compras e nas vendas com os outros países. Observa-se que apresentou uma redução relativa de magnitude elevada nas importações, enquanto nas exportações, não houve uma diferença relativa tão expressiva quanto. 
 
-A Tabela [tab:@origem] apresenta os principais parceiros comerciais do Tocantins e seus principais blocos econômicos que exportaram e importaram no ano de 2022. Quando o assunto é exportação, o Tocantins desempenha um papel de relevo comparado ao pouco tempo que o estado tem de existência, e mesmo sendo relativamente pequeno, está na 14a colocação no ranking de maiores exportadores brasileiros. No ano de 2022 teve uma variação de 67,3% de aumento das exportações em relação ao ano de 2021 atingindo o valor bruto de 3,1 bilhões em dólares.  Em 2022, o Tocantins comercializou seus produtos com 80 países, entre eles a China, seu principal parceiro, que teve participação de 52% no total das exportações, reduzindo em 4% em comparação ao ano passado. A diversidade de países com relações comerciais com o Tocantins é visível na Tabela [tab:@origem], pois além da China, grande compradora dos grãos e carnes produzidos no estado, encontra-se também países como Espanha, representando 12% do total exportado, que, aproximadamente, aumentou 4% e Tailândia com 4,3%, no qual não cresceu de forma tão expressiva ao comparar com o ano passado (cerca de 0,7%). Nas importações os EUA se destacaram com 36% de representatividade, Óleos de petróleo de minerais betuminosos e adubos fertilizantes estão entre os produtos mais importados pelo estado. Outros países no qual o Tocantins aparece dependente nas importações são Rússia, a própria China, Argentina e Venezuela. 
+No fim da tabela, encontra-se Santa Rosa do Tocantins e Guaraí como o quarto e o quinto município, respectivamente, que mais desempenharam nas vendas ao mercado exterior. Guaraí também comparece nos munícios mais importadores do Estado, sendo o quarto de maior magnitude e Xambioá o quinto. 
 
+   
 
 ```{r origem}
 dplyr::bind_cols(
   tribble(
     ~x, ~y,
-    "China", 52,
-    "Espanha", 12,
-    "Tailândia", 4.3,
-    "Turquia", 4.0,
-    "Arábia Saudita", 2.7
+    "China", 61,
+    "Espanha", 8,
+    "Arábia Saudita", 3.1,
+    "Turquia", 2.20,
+    "Tailândia", 2.1
   ),
   tribble(
     ~x, ~y,
-    "EUA", 36,
-    "Rússia", 27,
-    "China", 10,
-    "Argentina", 7.9,
-    "Venezuela", 3.2
+    "Rússia", 32,
+    "China", 15,
+    "Bélgica", 14,
+    "Estônia", 6.5,
+    "EUA", 5.9
   )
 ) %>%
   kbl(
     booktabs = TRUE,
-    col.names = c("", "Exportação", "", "Importação"),
-    caption = "Origem das Exportações e Importações\\label{tab:import_export}",
+    col.names = c("País", "Exportação", "País", "Importação"),
+    caption = "Origem das Exportações e Importações em percentual \\label{tab:import_export}",
     # label = "import_export",
     centering = FALSE
   ) %>%
@@ -132,3 +130,44 @@ dplyr::bind_cols(
     footnote_as_chunk = TRUE
   )
 ```
+
+
+```{r munin}
+dplyr::bind_cols(
+  tribble(
+    ~x, ~y,
+    "Porto Nacional", 612.3,
+    "Palmas", 370.8,
+    "Gurupi", 330.2,
+    "Santa Rosa do Tocantins", 309.2,
+    "Guaraí", 198.7
+  ),
+  tribble(
+    ~x, ~y,
+    "Porto Nacional", 177.4,
+    "Palmas", 65.0,
+    "Gurupi", 8.2,
+    "Guaraí", 4.1,
+    "Xambioá ", 3.5
+  )
+) %>%
+  kbl(
+    booktabs = TRUE,
+    col.names = c("", "Exportação", "", "Importação"),
+    caption = "Principais Municípios que Exportam e Importam no Estado",
+    # label = "import_export",
+    centering = FALSE
+  ) %>%
+  footnote(
+    general = "COMEXSTAT",
+    general_title = "Fonte:",
+    footnote_as_chunk = TRUE
+  )
+```
+
+
+
+
+
+
+
